--- a/5-website-building/coffee-shop_/index.html
+++ b/5-website-building/coffee-shop_/index.html
@@ -150,7 +150,56 @@
     </div>
   </section>
 
-  <script src="js/jquery-3.7.1.slim.min.js"></script>
+  <section id="contact-info-section">
+    <div class="containter-fluid text-light">
+      <div class="row" id="contact-info-bg-1">
+        <div class="col-5 offset-1 p-5">
+          <h2>YOU ARE WELCOME!</h2>
+          <p>COME ON IN!</p>
+          <br>
+          <h4>WEEKDAYS</h4>
+          <p>08PM - 12PM</p>
+          <br>
+          <h4>WEEKENDS</h4>
+          <p>12 PM - 02 AM</p>
+        </div>
+        <div class="col-6 p-5" id="contact-info-bg-2">
+          <h2>CONTACT</h2>
+          <br>
+          <h4>PHONE</h4>
+          <p>+(000) 111 222 333</p>
+          <br>
+          <h4>MAIL</h4>
+          <p>address@domain.com</p>
+          <br>
+          <h4>ADDRESS</h4>
+          <p>543 TN, doula street NY, New York</p>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section id="map-section">
+
+  </section>
+  
+  <footer>
+    <div class="containter-fluid text-light py-3">
+      <div class="row">
+        <div class="col-5 offset-1 align-self-center">
+          Coffee Shop | © 2020 All rights reserved
+        </div>
+        <div class="col-5 text-end">
+          <a href="#" class="mx-3"><img src="img/facebook-icon.png" alt="facebook icon"></a>
+          <a href="#" class=""><img src="img/instagram-icon.png" alt="instagram icon"></a>
+          <a href="#" class="mx-3"><img src="img/twitter-icon.png" alt="twitter icon"></a>
+          <a href="#"><img src="img/phone-icon.png" alt="phone icon"></a>
+        </div>
+      </div>
+    </div>
+  </footer>
+
+  <script src="js/jquery-3.4.1.slim.min.js"></script>
   <script src="js/bootstrap.bundle.min.js"></script>
 </body>
 
