--- a/5-website-building/coffee-shop_/index.html
+++ b/5-website-building/coffee-shop_/index.html
@@ -17,11 +17,14 @@
         <div class="col-4">
           <img id="header-logo" src="img/header-logo.png" alt="coffe shop header logo">
         </div>
-        <div class="col-8 text-end">
+        <div class="d-none d-md-block col-8 text-right">
           <a class="text-decoration-none text-uppercase" href="#">about</a>
           <a class="text-decoration-none text-uppercase" href="#">products</a>
           <a class="text-decoration-none text-uppercase" href="#">contact</a>
           <a class="text-decoration-none text-uppercase" href="#">how to find us?</a>
+        </div>
+        <div class="d-md-none col-8 text-right">
+          <img id="menu-icon" src="img/menu.png" alt="menu icon">
         </div>
       </div>
     </div>
@@ -46,25 +49,25 @@
   <section id="intro-section" class="py-5">
     <div class="container py-5">
       <div class="row justify-content-center">
-        <div class="col-6 text-center py-5">
-          <h1>THE BEST COFFEE SHOP</h1>
+        <div class="col-10 col-xl-6 text-center py-5">
+          <h1 class="font-weight-bold">THE BEST COFFEE SHOP</h1>
           <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Corrupti assumenda similique reiciendis
             exercitationem eveniet expedita culpa, cum tempora cupiditate iste. Nostrum necessitatibus fugiat veniam
             laboriosam magnam eligendi illo rem earum!</p>
         </div>
       </div>
       <div class="row py-5">
-        <div class="col-4 text-center">
+        <div class="col-sm-4 text-center">
           <img class="img-fluid py-3" src="img/icon-1.png" alt="icon 1">
-          <p class="h4">BEST BEANS</p>
+          <p class="h4 font-weight-bold">BEST BEANS</p>
         </div>
-        <div class="col-4 text-center">
+        <div class="col-sm-4 text-center">
           <img class="img-fluid py-3" src="img/icon-2.png" alt="icon 2">
-          <p class="h4">QUALITY MILK</p>
+          <p class="h4 font-weight-bold">QUALITY MILK</p>
         </div>
-        <div class="col-4 text-center">
+        <div class="col-sm-4 text-center">
           <img class="img-fluid py-3" src="img/icon-3.png" alt="icon 3">
-          <p class="h4">PERFECT BLEND</p>
+          <p class="h4 font-weight-bold">PERFECT BLEND</p>
         </div>
       </div>
     </div>
@@ -73,22 +76,22 @@
   <section id="about-section">
     <div class="container-fluid">
       <div class="row">
-        <div class="col-5 offset-1 align-self-center">
+        <div class="col-12 col-md-5 offset-md-1 align-self-center p-5">
           <h2>GREAT PLACE</h2>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora, obcaecati dolorum sit itaque placeat
             repudiandae in voluptatibus neque debitis perferendis dolore accusamus commodi perspiciatis quisquam. Totam
             architecto amet sit obcaecati!</p>
           <button class="btn btn-primary">FIND OUT MORE</button>
         </div>
-        <div class="col-5 offset-1" id="about-bg-1">
+        <div class="d-none d-md-block col-md-5 offset-md-1" id="about-bg-1">
 
         </div>
       </div>
       <div class="row align-items-center" id="about-bg-2">
-        <div class="col-6">
+        <div class="d-none d-md-block col-0 col-md-6">
 
         </div>
-        <div class="col-6 text-light">
+        <div class="col-12 col-md-6 text-light p-5">
           <h2>FRESH BEANS</h2>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora, obcaecati dolorum sit itaque placeat
             repudiandae in voluptatibus neque debitis perferendis dolore accusamus commodi perspiciatis quisquam. Totam
@@ -109,6 +112,7 @@
             velit, ad ipsa corporis sapiente.</p>
         </div>
       </div>
+
       <div class="row">
         <div class="col-sm-6 col-md-4 p-5 text-center">
           <img class="img-fluid" src="img/coffee-item-1.png" alt="coffee item 1">
@@ -153,7 +157,7 @@
   <section id="contact-info-section">
     <div class="containter-fluid text-light">
       <div class="row" id="contact-info-bg-1">
-        <div class="col-5 offset-1 p-5">
+        <div class="col-md-5 offset-md-1 p-5">
           <h2>YOU ARE WELCOME!</h2>
           <p>COME ON IN!</p>
           <br>
@@ -163,7 +167,7 @@
           <h4>WEEKENDS</h4>
           <p>12 PM - 02 AM</p>
         </div>
-        <div class="col-6 p-5" id="contact-info-bg-2">
+        <div class="col-md-6 p-5" id="contact-info-bg-2">
           <h2>CONTACT</h2>
           <br>
           <h4>PHONE</h4>
@@ -186,10 +190,10 @@
   <footer>
     <div class="containter-fluid text-light py-3">
       <div class="row">
-        <div class="col-5 offset-1 align-self-center">
+        <div class="col-md-5 offset-md-1 align-self-center">
           Coffee Shop | © 2020 All rights reserved
         </div>
-        <div class="col-5 text-end">
+        <div class="col-md-5 text-right" id="social-icons">
           <a href="#" class="mx-3"><img src="img/facebook-icon.png" alt="facebook icon"></a>
           <a href="#" class=""><img src="img/instagram-icon.png" alt="instagram icon"></a>
           <a href="#" class="mx-3"><img src="img/twitter-icon.png" alt="twitter icon"></a>
