--- a/5-website-building/assignment-01/index.html
+++ b/5-website-building/assignment-01/index.html
@@ -1,14 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Assignment-01</title>
   <link rel="stylesheet" href="css/bootstrap.min.css">
+  <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
-  
+  <header class="">
+    <div class="container py-3">
+      <div class="row align-items-center">
+        <div class="col-6 col-md-4">
+          <div id="header-logo">
+            <h1 class="display-5 m-0">My Website</h1>
+          </div>
+        </div>
+        <div id="navigation-links" class="d-none d-md-block col-md-8 text-end h6 m-0">
+          <a class="text-decoration-none text-muted mx-2" href="#">Home</a>
+          <a class="text-decoration-none text-muted" href="#">Portfolio</a>
+          <a class="text-decoration-none text-muted mx-2" href="#">Staff</a>
+          <a class="text-decoration-none text-muted" href="#">Features</a>
+          <a class="text-decoration-none text-muted mx-2" href="#">Blog</a>
+          <a class="text-decoration-none text-muted" href="#">Contact</a>
+          <a class="text-decoration-none text-muted mx-2" href="#">Download</a>
+        </div>
+        <div class="col-6 d-md-none text-end m-0 p-0 h3">
+          <img id="menu-icon" src="imgs/menu.png" alt="menu icon">
+          <a id="menu-link" class="text-decoration-none text-muted" href="#">Menu</a>
+        </div>
+      </div>
+    </div>
+  </header>
+
+  <section id="hero-section"></section>
+
+  <section></section>
   <script src="js/jquery-3.7.1.slim.min.js"></script>
   <script src="js/bootstrap.bundle.min.js"></script>
 </body>
+
 </html>
