--- a/5-website-building/assignment-01/index.html
+++ b/5-website-building/assignment-01/index.html
@@ -18,7 +18,7 @@
             <h1 class="display-5 m-0">My Website</h1>
           </div>
         </div>
-        <div id="navigation-links" class="d-none d-md-block col-md-8 text-end h6 m-0">
+        <div id="navigation-links" class="d-none d-md-block col-md-8 text-end h6 mt-3">
           <a class="text-decoration-none text-muted mx-2" href="#">Home</a>
           <a class="text-decoration-none text-muted" href="#">Portfolio</a>
           <a class="text-decoration-none text-muted mx-2" href="#">Staff</a>
@@ -27,7 +27,7 @@
           <a class="text-decoration-none text-muted" href="#">Contact</a>
           <a class="text-decoration-none text-muted mx-2" href="#">Download</a>
         </div>
-        <div class="col-6 d-md-none text-end m-0 p-0 h3">
+        <div class="col-6 d-md-none text-end m-0 p-0 h3 mt-1">
           <img id="menu-icon" src="imgs/menu.png" alt="menu icon">
           <a id="menu-link" class="text-decoration-none text-muted" href="#">Menu</a>
         </div>
