--- a/5-website-building/assignment-01/index.html
+++ b/5-website-building/assignment-01/index.html
@@ -10,8 +10,8 @@
 </head>
 
 <body>
-  <header class="">
-    <div class="container py-3">
+  <header class="py-3">
+    <div class="container">
       <div class="row align-items-center">
         <div class="col-6 col-md-4">
           <div id="header-logo">
@@ -35,9 +35,45 @@
     </div>
   </header>
 
-  <section id="hero-section"></section>
+  <section id="hero-section">
+    <div class="container-fluid position-relative p-0">
+      <div class="row">
+        <div class="col-12">
+          <img id="hero-image" class="img-fluid" src="imgs/hero.jpg" alt="hero image">
+          <h3 id="hero-label" class="position-absolute text-light p-3 fw-bold">We strive to make all of our creations exquisite.</h3>
+        </div>
+      </div>
+    </div>
+  </section>
 
-  <section></section>
+  <!-- <section class="">
+    <div class="containter-fluid">
+      <div class="row">
+        <div class="col-12 position-relative">
+          <img class="img-fluid" src="imgs/hero.jpg" alt="hero image">
+          <div class="position-absolute top-50 start-50 translate-middle text-center">
+            <h3 class="h6 text-light py-2 fw-bold" style="background-color: #63c38f;">
+              We strive to make all of our creations exquisite.
+            </h3>
+          </div>
+
+        </div>
+      </div>
+    </div>
+  </section>
+  <hr> -->
+
+  <section>
+    <div class="containter-fluid">
+      <div class="row">
+        <div class="col-4">
+          <!-- <img src="imgs/icon-1.png" alt=""> -->
+        </div>
+
+      </div>
+    </div>
+  </section>
+
   <script src="js/jquery-3.7.1.slim.min.js"></script>
   <script src="js/bootstrap.bundle.min.js"></script>
 </body>
