--- a/5-website-building/assignment-01/index.html
+++ b/5-website-building/assignment-01/index.html
@@ -10,8 +10,8 @@
 </head>
 
 <body>
-  <header class="py-3">
-    <div class="container">
+  <header id="header-section">
+    <div class="container p-3">
       <div class="row align-items-center">
         <div class="col-6 col-md-4">
           <div id="header-logo">
@@ -19,13 +19,13 @@
           </div>
         </div>
         <div id="navigation-links" class="d-none d-md-block col-md-8 text-end h6 mt-3">
-          <a class="text-decoration-none text-muted mx-2" href="#">Home</a>
-          <a class="text-decoration-none text-muted" href="#">Portfolio</a>
-          <a class="text-decoration-none text-muted mx-2" href="#">Staff</a>
-          <a class="text-decoration-none text-muted" href="#">Features</a>
-          <a class="text-decoration-none text-muted mx-2" href="#">Blog</a>
-          <a class="text-decoration-none text-muted" href="#">Contact</a>
-          <a class="text-decoration-none text-muted mx-2" href="#">Download</a>
+          <a class="" href="#">Home</a>
+          <a class="mx-md-2" href="#">Portfolio</a>
+          <a class="" href="#">Staff</a>
+          <a class="mx-md-2" href="#">Features</a>
+          <a class="" href="#">Blog</a>
+          <a class="mx-md-2" href="#">Contact</a>
+          <a class="" href="#">Download</a>
         </div>
         <div class="col-6 d-md-none text-end m-0 p-0 h3 mt-1">
           <img id="menu-icon" src="imgs/menu.png" alt="menu icon">
@@ -35,44 +35,208 @@
     </div>
   </header>
 
+  <!-- 
+      <div class="container-fluid position-relative">
+          <img src="putanja/do/slike.jpg" class="img-fluid" alt="Slika">
+          <div class="position-absolute top-50 start-50 translate-middle text-center">
+              <h1>Naslov</h1>
+              <p>Ovo je tekst koji će biti centriran na sredini slike.</p>
+          </div>
+      </div>
+   -->
+
   <section id="hero-section">
     <div class="container-fluid position-relative p-0">
       <div class="row">
         <div class="col-12">
           <img id="hero-image" class="img-fluid" src="imgs/hero.jpg" alt="hero image">
-          <h3 id="hero-label" class="position-absolute text-light p-3 fw-bold">We strive to make all of our creations exquisite.</h3>
+          <h3 id="hero-label" class="position-absolute text-light p-3 fw-bold">We strive to make all of our creations
+            exquisite.</h3>
         </div>
       </div>
     </div>
   </section>
 
-  <!-- <section class="">
-    <div class="containter-fluid">
+  <section id="intro-section">
+    <div class="container py-5 mt-3">
+      <div class="row text-center">
+        <div class="col-sm-12 col-md-6 col-lg-3 mb-3">
+          <img class="img-fluid" src="imgs/icon-1.png" alt="purpose icon">
+          <h4 class="p-3 m-0">Purpose</h4>
+          <p class="text-muted">Vestbulum sapien nisi, suscipit vitae euismod vitae, imperdiet eget est. Etiam tincidunt
+            tempus.</p>
+        </div>
+        <div class="col-sm-12 col-md-6 col-lg-3 mb-3">
+          <img class="img-fluid" src="imgs/icon-2.png" alt="quality icon">
+          <h4 class="p-3 m-0">Quality</h4>
+          <p class="text-muted">Nam commodo risus pharetra magna egestas, nec iaculis augue lobortis. Proin eleifend
+            enim iquis.</p>
+        </div>
+        <div class="col-sm-12 col-md-6 col-lg-3 mb-3">
+          <img class="img-fluid" src="imgs/icon-3.png" alt="function icon">
+          <h4 class="p-3 m-0">Function</h4>
+          <p class="text-muted">Aenean et tellus id nisi vehicula fringilla. In condimentum dui eu turpis mollis turpis
+            suscipit.</p>
+        </div>
+        <div class="col-sm-12 col-md-6 col-lg-3 mb-3">
+          <img class="img-fluid" src="imgs/icon-4.png" alt="elegant icon">
+          <h4 class="p-3 m-0">Elegant</h4>
+          <p class="text-muted">Mauris accumsan magna in placerat lacinia. Proin sit amet neque vitae nunc pulvinar
+            varius.</p>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section id="recent-section">
+    <div class="container py-5">
       <div class="row">
-        <div class="col-12 position-relative">
-          <img class="img-fluid" src="imgs/hero.jpg" alt="hero image">
-          <div class="position-absolute top-50 start-50 translate-middle text-center">
-            <h3 class="h6 text-light py-2 fw-bold" style="background-color: #63c38f;">
-              We strive to make all of our creations exquisite.
-            </h3>
+        <h3>RECENT WORK</h3>
+        <hr>
+      </div>
+      <div class="row mt-3">
+        <div class="col-sm-12 col-md-6 col-lg-3">
+          <a id="green-bike" class="" href="#recent-section">
+            <img class="img-fluid" src="imgs/bike-400x340.jpg" alt="bike image">
+            <h4 class="fw-bold m-0 mt-2">Green Bike</h4>
+            <p class="text-muted">Beautiful, Travel</p>
+          </a>
+        </div>
+        <div class="col-sm-12 col-md-6 col-lg-3">
+          <a id="salt-of-the-earth" class="" href="#recent-section">
+            <img class="img-fluid" src="imgs/surf-400x340.jpg" alt="surf image">
+            <h4 class="fw-bold m-0 mt-2">Salt Of The Earth</h4>
+            <p class="text-muted">Beautiful, Travel</p>
+          </a>
           </div>
-
+        <div class="col-sm-12 col-md-6 col-lg-3">
+          <a id="mountain-high" class="" href="#recent-section">
+            <img class="img-fluid" src="imgs/hills-400x340.jpg" alt="hills image">
+            <h4 class="fw-bold m-0 mt-2">Mountain High</h4>
+            <p class="text-muted">Travel</p>
+          </a>
+        </div>
+        <div class="col-sm-12 col-md-6 col-lg-3">
+          <a id="when-a-tree-falls" class="" href="#recent-section">
+            <img class="img-fluid" src="imgs/path-400x340.jpg" alt="path image">
+            <h4 class="fw-bold m-0 mt-2">When A Tree Falls</h4>
+            <p class="text-muted">Beautiful</p>
+          </a>
         </div>
       </div>
     </div>
   </section>
-  <hr> -->
 
-  <section>
-    <div class="containter-fluid">
+  <section id="blog-section">
+    <div class="container py-5">
       <div class="row">
-        <div class="col-4">
-          <!-- <img src="imgs/icon-1.png" alt=""> -->
+        <h3>FROM THE BLOG</h3>
+        <hr>
+      </div>
+      <div class="row mt-3">
+        <div class="col-sm-12 col-md-6 col-lg-4">
+          <a id="blog-how-now" class="" href="#blog-section">
+            <img class="img-fluid" src="imgs/cow-640x340.jpg" alt="cow image">
+            <h4 class="fw-bold m-0 mt-2">How Now</h4>
+            <h6>Posted on October 28, 2020</h6>
+            <p class="text-muted">Proin et ligual laoreet, vestibulum orci nec, eleifend purus. Quisque ullamcorper sem at
+              ipsum elementum laoreet.
+              Integer egestas...</p>
+          </a>
         </div>
-
+        <div class="col-sm-12 col-md-6 col-lg-4">
+          <a id="blog-adrift" class="" href="#blog-section">
+            <img class="img-fluid" src="imgs/sunrise-640x340.jpg" alt="sunrise image">
+            <h4 class="fw-bold m-0 mt-2">Adrift by Simon Christen</h4>
+            <h6>Posted on September 29, 2020</h6>
+            <p class="text-muted">Morbi vulputate egestas sem, eu cursus ligula ullamcorper non. Curabitur tristque velit
+              eu mauris vegenatis egestas.
+              Phasellus bibendum...</p>
+          </a>
+        </div>
+        <div class="col-sm-12 col-md-6 col-lg-4">
+          <a id="blog-walk" class="" href="#blog-section">
+            <img class="img-fluid" src="imgs/grass-640x340.jpg" alt="grass image">
+            <h4 class="fw-bold m-0 mt-2">A Walk In The Park</h4>
+            <h6>Posted on August 10, 2020</h6>
+            <p class="text-muted">Proin elementum phaeretra mauris sed semper. Cras lorem arcu, vulputate ut malesuada ut,
+              tincidunt tempor lectus.
+              Etiam adipiscing...</p>
+          </a>
+        </div>
       </div>
     </div>
   </section>
+
+  <footer>
+    <div class="container">
+      <div class="row py-5 mt-3">
+        <div class="col-sm-12 col-md-6 col-lg-4">
+          <a class="text-light text-decoration-none" href="#header-section">
+            <h4 class="fw-bold">My Website</h4>
+          </a>
+          <p class="text-light">Quisque id dolor leo. Vivamus tincidunt in diam ac condimentum. Quisque rutrum dolor
+            dolor, non
+            tincidunt tellus
+            sollicitudin vitae. Mauris a dolor ut nibh voluptpat aliquam. Sed dictum magna eu massa accumsan, sit amet
+            viverra
+            ligula gravida. Nam vehicula ut leo aliquet sodales.</p>
+        </div>
+        <div class="col-sm-12 col-md-6 col-lg-4">
+          <a class="text-light text-decoration-none" href="#blog-section">
+            <h4 class="fw-bold">Recent Posts</h4>
+          </a>
+          <hr class="text-light">
+          <a class="text-light text-decoration-none" href="#blog-how-now">
+            <h6>How Now</h6>
+          </a>
+          <hr class="text-light">
+          <a class="text-light text-decoration-none" href="#blog-adrift">
+            <h6>Adrift by Simon Christen</h6>
+          </a>
+          <hr class="text-light">
+          <a class="text-light text-decoration-none" href="#blog-walk">
+            <h6>A Walk In The Park</h6>
+          </a>
+          <hr class="text-light">
+          <a class="text-light text-decoration-none" href="#blog-section">
+            <h6>Time To Think</h6>
+          </a>
+          <hr class="text-light">
+          <a class="text-light text-decoration-none" href="#blog-section">
+            <h6>Field Of Dreams</h6>
+          </a>
+          <hr class="text-light">
+        </div>
+        <div class="col-sm-12 col-md-6 col-lg-4">
+          <a class="text-light text-decoration-none" href="#recent-section">
+            <h4 class="fw-bold">Recent Work</h4>
+          </a>
+          <hr class="text-light">
+          <a class="text-light text-decoration-none" href="#recent-section">
+            <h6>Beautiful</h6>
+          </a>
+          <hr class="text-light">
+          <a class="text-light text-decoration-none" href="#recent-section">
+            <h6>Travel</h6>
+          </a>
+          <hr class="text-light">
+          <a class="text-light text-decoration-none" href="#recent-section">
+            <h6>Surreal</h6>
+          </a>
+          <hr class="text-light">
+          <a class="text-light text-decoration-none" href="#recent-section">
+            <h6>Thoughts</h6>
+          </a>
+          <hr class="text-light">
+          <a class="text-light text-decoration-none" href="#recent-section">
+            <h6>Unique</h6>
+          </a>
+          <hr class="text-light">
+        </div>
+      </div>
+    </div>
+  </footer>
 
   <script src="js/jquery-3.7.1.slim.min.js"></script>
   <script src="js/bootstrap.bundle.min.js"></script>
