--- a/5-website-building/assignment-01/index.html
+++ b/5-website-building/assignment-01/index.html
@@ -99,29 +99,29 @@
           <a id="green-bike" class="" href="#recent-section">
             <img class="img-fluid" src="imgs/bike-400x340.jpg" alt="bike image">
             <h4 class="fw-bold m-0 mt-2">Green Bike</h4>
-            <p class="text-muted">Beautiful, Travel</p>
           </a>
+          <p class="text-muted">Beautiful, Travel</p>
         </div>
         <div class="col-sm-12 col-md-6 col-lg-3">
           <a id="salt-of-the-earth" class="" href="#recent-section">
             <img class="img-fluid" src="imgs/surf-400x340.jpg" alt="surf image">
             <h4 class="fw-bold m-0 mt-2">Salt Of The Earth</h4>
-            <p class="text-muted">Beautiful, Travel</p>
           </a>
-          </div>
+          <p class="text-muted">Beautiful, Travel</p>
+        </div>
         <div class="col-sm-12 col-md-6 col-lg-3">
           <a id="mountain-high" class="" href="#recent-section">
             <img class="img-fluid" src="imgs/hills-400x340.jpg" alt="hills image">
             <h4 class="fw-bold m-0 mt-2">Mountain High</h4>
-            <p class="text-muted">Travel</p>
           </a>
+          <p class="text-muted">Travel</p>
         </div>
         <div class="col-sm-12 col-md-6 col-lg-3">
           <a id="when-a-tree-falls" class="" href="#recent-section">
             <img class="img-fluid" src="imgs/path-400x340.jpg" alt="path image">
             <h4 class="fw-bold m-0 mt-2">When A Tree Falls</h4>
-            <p class="text-muted">Beautiful</p>
           </a>
+          <p class="text-muted">Beautiful</p>
         </div>
       </div>
     </div>
@@ -138,31 +138,31 @@
           <a id="blog-how-now" class="" href="#blog-section">
             <img class="img-fluid" src="imgs/cow-640x340.jpg" alt="cow image">
             <h4 class="fw-bold m-0 mt-2">How Now</h4>
-            <h6>Posted on October 28, 2020</h6>
-            <p class="text-muted">Proin et ligual laoreet, vestibulum orci nec, eleifend purus. Quisque ullamcorper sem at
-              ipsum elementum laoreet.
-              Integer egestas...</p>
           </a>
+          <h6>Posted on October 28, 2020</h6>
+          <p class="text-muted">Proin et ligual laoreet, vestibulum orci nec, eleifend purus. Quisque ullamcorper sem at
+            ipsum elementum laoreet.
+            Integer egestas...</p>
         </div>
         <div class="col-sm-12 col-md-6 col-lg-4">
           <a id="blog-adrift" class="" href="#blog-section">
             <img class="img-fluid" src="imgs/sunrise-640x340.jpg" alt="sunrise image">
             <h4 class="fw-bold m-0 mt-2">Adrift by Simon Christen</h4>
-            <h6>Posted on September 29, 2020</h6>
-            <p class="text-muted">Morbi vulputate egestas sem, eu cursus ligula ullamcorper non. Curabitur tristque velit
-              eu mauris vegenatis egestas.
-              Phasellus bibendum...</p>
           </a>
+          <h6>Posted on September 29, 2020</h6>
+          <p class="text-muted">Morbi vulputate egestas sem, eu cursus ligula ullamcorper non. Curabitur tristque velit
+            eu mauris vegenatis egestas.
+            Phasellus bibendum...</p>
         </div>
         <div class="col-sm-12 col-md-6 col-lg-4">
           <a id="blog-walk" class="" href="#blog-section">
             <img class="img-fluid" src="imgs/grass-640x340.jpg" alt="grass image">
             <h4 class="fw-bold m-0 mt-2">A Walk In The Park</h4>
-            <h6>Posted on August 10, 2020</h6>
-            <p class="text-muted">Proin elementum phaeretra mauris sed semper. Cras lorem arcu, vulputate ut malesuada ut,
-              tincidunt tempor lectus.
-              Etiam adipiscing...</p>
           </a>
+          <h6>Posted on August 10, 2020</h6>
+          <p class="text-muted">Proin elementum phaeretra mauris sed semper. Cras lorem arcu, vulputate ut malesuada ut,
+            tincidunt tempor lectus.
+            Etiam adipiscing...</p>
         </div>
       </div>
     </div>
@@ -172,66 +172,40 @@
     <div class="container">
       <div class="row py-5 mt-3">
         <div class="col-sm-12 col-md-6 col-lg-4">
-          <a class="text-light text-decoration-none" href="#header-section">
+          <a href="#header-section">
             <h4 class="fw-bold">My Website</h4>
           </a>
           <p class="text-light">Quisque id dolor leo. Vivamus tincidunt in diam ac condimentum. Quisque rutrum dolor
-            dolor, non
-            tincidunt tellus
-            sollicitudin vitae. Mauris a dolor ut nibh voluptpat aliquam. Sed dictum magna eu massa accumsan, sit amet
-            viverra
-            ligula gravida. Nam vehicula ut leo aliquet sodales.</p>
+            dolor, non tincidunt tellus sollicitudin vitae. Mauris a dolor ut nibh voluptpat aliquam. Sed dictum magna
+            eu massa accumsan, sit amet
+            viverra ligula gravida. Nam vehicula ut leo aliquet sodales.</p>
         </div>
-        <div class="col-sm-12 col-md-6 col-lg-4">
-          <a class="text-light text-decoration-none" href="#blog-section">
-            <h4 class="fw-bold">Recent Posts</h4>
-          </a>
+        <div class="col-sm-12 col-md-6 col-lg-4 mb-2">
+          <a href="#blog-section"><h4 class="fw-bold">Recent Posts</h4></a>
           <hr class="text-light">
-          <a class="text-light text-decoration-none" href="#blog-how-now">
-            <h6>How Now</h6>
-          </a>
+          <a href="#blog-how-now"><h6>How Now</h6></a>
           <hr class="text-light">
-          <a class="text-light text-decoration-none" href="#blog-adrift">
-            <h6>Adrift by Simon Christen</h6>
-          </a>
+          <a href="#blog-adrift"><h6>Adrift by Simon Christen</h6></a>
           <hr class="text-light">
-          <a class="text-light text-decoration-none" href="#blog-walk">
-            <h6>A Walk In The Park</h6>
-          </a>
+          <a href="#blog-walk"><h6>A Walk In The Park</h6></a>
           <hr class="text-light">
-          <a class="text-light text-decoration-none" href="#blog-section">
-            <h6>Time To Think</h6>
-          </a>
+          <a href="#blog-section"><h6>Time To Think</h6></a>
           <hr class="text-light">
-          <a class="text-light text-decoration-none" href="#blog-section">
-            <h6>Field Of Dreams</h6>
-          </a>
+          <a href="#blog-section"><h6>Field Of Dreams</h6></a>
           <hr class="text-light">
         </div>
         <div class="col-sm-12 col-md-6 col-lg-4">
-          <a class="text-light text-decoration-none" href="#recent-section">
-            <h4 class="fw-bold">Recent Work</h4>
-          </a>
+          <a href="#recent-section"><h4 class="fw-bold">Recent Work</h4></a>
           <hr class="text-light">
-          <a class="text-light text-decoration-none" href="#recent-section">
-            <h6>Beautiful</h6>
-          </a>
+          <a href="#recent-section"><h6>Beautiful</h6></a>
           <hr class="text-light">
-          <a class="text-light text-decoration-none" href="#recent-section">
-            <h6>Travel</h6>
-          </a>
+          <a href="#recent-section"><h6>Travel</h6></a>
           <hr class="text-light">
-          <a class="text-light text-decoration-none" href="#recent-section">
-            <h6>Surreal</h6>
-          </a>
+          <a href="#recent-section"><h6>Surreal</h6></a>
           <hr class="text-light">
-          <a class="text-light text-decoration-none" href="#recent-section">
-            <h6>Thoughts</h6>
-          </a>
+          <a href="#recent-section"><h6>Thoughts</h6></a>
           <hr class="text-light">
-          <a class="text-light text-decoration-none" href="#recent-section">
-            <h6>Unique</h6>
-          </a>
+          <a href="#recent-section"><h6>Unique</h6></a>
           <hr class="text-light">
         </div>
       </div>
