--- a/5-website-building/assignment-01/index.html
+++ b/5-website-building/assignment-01/index.html
@@ -35,23 +35,13 @@
     </div>
   </header>
 
-  <!-- 
-      <div class="container-fluid position-relative">
-          <img src="putanja/do/slike.jpg" class="img-fluid" alt="Slika">
-          <div class="position-absolute top-50 start-50 translate-middle text-center">
-              <h1>Naslov</h1>
-              <p>Ovo je tekst koji će biti centriran na sredini slike.</p>
-          </div>
-      </div>
-   -->
-
   <section id="hero-section">
     <div class="container-fluid position-relative p-0">
       <div class="row">
         <div class="col-12">
           <img id="hero-image" class="img-fluid" src="imgs/hero.jpg" alt="hero image">
-          <h3 id="hero-label" class="position-absolute text-light p-3 fw-bold">We strive to make all of our creations
-            exquisite.</h3>
+          <!-- <div id="hero-label" class="position-absolute text-light p-3 fw-bold top-50 start-50 translate-middle text-center">We strive to make all of our creations exquisite.</div> -->
+          <div id="hero-label" class="position-absolute h4 p-3 fw-bold text-light">We strive to make all of our creations exquisite.</div>
         </div>
       </div>
     </div>
@@ -181,31 +171,55 @@
             viverra ligula gravida. Nam vehicula ut leo aliquet sodales.</p>
         </div>
         <div class="col-sm-12 col-md-6 col-lg-4 mb-2">
-          <a href="#blog-section"><h4 class="fw-bold">Recent Posts</h4></a>
+          <a href="#blog-section">
+            <h4 class="fw-bold">Recent Posts</h4>
+          </a>
           <hr class="text-light">
-          <a href="#blog-how-now"><h6>How Now</h6></a>
+          <a href="#blog-how-now">
+            <h6>How Now</h6>
+          </a>
           <hr class="text-light">
-          <a href="#blog-adrift"><h6>Adrift by Simon Christen</h6></a>
+          <a href="#blog-adrift">
+            <h6>Adrift by Simon Christen</h6>
+          </a>
           <hr class="text-light">
-          <a href="#blog-walk"><h6>A Walk In The Park</h6></a>
+          <a href="#blog-walk">
+            <h6>A Walk In The Park</h6>
+          </a>
           <hr class="text-light">
-          <a href="#blog-section"><h6>Time To Think</h6></a>
+          <a href="#blog-section">
+            <h6>Time To Think</h6>
+          </a>
           <hr class="text-light">
-          <a href="#blog-section"><h6>Field Of Dreams</h6></a>
+          <a href="#blog-section">
+            <h6>Field Of Dreams</h6>
+          </a>
           <hr class="text-light">
         </div>
         <div class="col-sm-12 col-md-6 col-lg-4">
-          <a href="#recent-section"><h4 class="fw-bold">Recent Work</h4></a>
+          <a href="#recent-section">
+            <h4 class="fw-bold">Recent Work</h4>
+          </a>
           <hr class="text-light">
-          <a href="#recent-section"><h6>Beautiful</h6></a>
+          <a href="#recent-section">
+            <h6>Beautiful</h6>
+          </a>
           <hr class="text-light">
-          <a href="#recent-section"><h6>Travel</h6></a>
+          <a href="#recent-section">
+            <h6>Travel</h6>
+          </a>
           <hr class="text-light">
-          <a href="#recent-section"><h6>Surreal</h6></a>
+          <a href="#recent-section">
+            <h6>Surreal</h6>
+          </a>
           <hr class="text-light">
-          <a href="#recent-section"><h6>Thoughts</h6></a>
+          <a href="#recent-section">
+            <h6>Thoughts</h6>
+          </a>
           <hr class="text-light">
-          <a href="#recent-section"><h6>Unique</h6></a>
+          <a href="#recent-section">
+            <h6>Unique</h6>
+          </a>
           <hr class="text-light">
         </div>
       </div>
