nav links mx-md-1 lg-2 xl-3

--- a/5-website-building/assignment-01/index.html
+++ b/5-website-building/assignment-01/index.html
@@ -20,11 +20,11 @@
         </div>
         <div id="navigation-links" class="d-none d-md-block col-md-8 text-end h6 mt-3">
           <a class="" href="#">Home</a>
-          <a class="mx-md-2" href="#">Portfolio</a>
+          <a class="mx-md-1 mx-lg-2 mx-xl-3" href="#">Portfolio</a>
           <a class="" href="#">Staff</a>
-          <a class="mx-md-2" href="#">Features</a>
+          <a class="mx-md-1 mx-lg-2 mx-xl-3" href="#">Features</a>
           <a class="" href="#">Blog</a>
-          <a class="mx-md-2" href="#">Contact</a>
+          <a class="mx-md-1 mx-lg-2 mx-xl-3" href="#">Contact</a>
           <a class="" href="#">Download</a>
         </div>
         <div class="col-6 d-md-none text-end m-0 p-0 h3 mt-1">
