coffe shop event handler

--- a/5-website-building/coffee-shop_/index.html
+++ b/5-website-building/coffee-shop_/index.html
@@ -11,6 +11,27 @@
 </head>
 
 <body>
+
+  <div id="mobile-menu">
+    <a id="close-btn" href="#"><img class="img-fluid" src="img/close-btn.png" alt="close"></a>
+    <div class="container">
+      <div class="row vh-100 align-items-center">
+        <div class="col-12 text-center">
+          <nav>
+            <div><a class="mobile-menu-item text-decoration-none text-uppercase h3" href="#intro-section">about</a>
+            </div>
+            <div class="my-3"><a class="mobile-menu-item text-decoration-none text-uppercase h3"
+                href="#menu-section">products</a></div>
+            <div class="mb-3"><a class="mobile-menu-item text-decoration-none text-uppercase h3"
+                href="#contact-info-section">contact</a></div>
+            <div><a class="mobile-menu-item text-decoration-none text-uppercase h3" href="#map-section">how to find
+                us?</a></div>
+          </nav>
+        </div>
+      </div>
+    </div>
+  </div>
+
   <header class="p-3">
     <div class="container-fluid">
       <div class="row">
@@ -18,13 +39,14 @@
           <img id="header-logo" src="img/header-logo.png" alt="coffe shop header logo">
         </div>
         <div class="d-none d-md-block col-8 text-right">
-          <a class="text-decoration-none text-uppercase" href="#">about</a>
-          <a class="text-decoration-none text-uppercase" href="#">products</a>
-          <a class="text-decoration-none text-uppercase" href="#">contact</a>
-          <a class="text-decoration-none text-uppercase" href="#">how to find us?</a>
+          <a class="text-decoration-none text-uppercase" href="#intro-section">about</a>
+          <a class="text-decoration-none text-uppercase" href="#menu-section">products</a>
+          <a class="text-decoration-none text-uppercase" href="#contact-info-section">contact</a>
+          <a class="text-decoration-none text-uppercase" href="#map-section">how to find us?</a>
         </div>
         <div class="d-md-none col-8 text-right">
-          <img id="menu-icon" src="img/menu.png" alt="menu icon">
+          <a id="menu-btn" href="#"><img id="menu-icon" src="img/menu.png" alt="menu icon"></a>
+
         </div>
       </div>
     </div>
@@ -117,37 +139,43 @@
         <div class="col-sm-6 col-md-4 p-5 text-center">
           <img class="img-fluid" src="img/coffee-item-1.png" alt="coffee item 1">
           <h2 class="my-3">BLACK CAKE</h2>
-          <p class="lead my-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti quas, molestiae iusto perspiciatis in vitae cumque reprehenderit est adipisci maxime?</p>
+          <p class="lead my-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti quas, molestiae iusto
+            perspiciatis in vitae cumque reprehenderit est adipisci maxime?</p>
           <p class="h3">4€</p>
         </div>
         <div class="col-sm-6 col-md-4 p-5 text-center">
           <img class="img-fluid" src="img/coffee-item-2.png" alt="coffee item 2">
           <h2 class="my-3">BLACK COFFE</h2>
-          <p class="lead my-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti quas, molestiae iusto perspiciatis in vitae cumque reprehenderit est adipisci maxime?</p>
+          <p class="lead my-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti quas, molestiae iusto
+            perspiciatis in vitae cumque reprehenderit est adipisci maxime?</p>
           <p class="h3">6€</p>
         </div>
         <div class="col-sm-6 col-md-4 p-5 text-center">
           <img class="img-fluid" src="img/coffee-item-3.png" alt="coffee item 3">
           <h2 class="my-3">ESPRESSO</h2>
-          <p class="lead my-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti quas, molestiae iusto perspiciatis in vitae cumque reprehenderit est adipisci maxime?</p>
+          <p class="lead my-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti quas, molestiae iusto
+            perspiciatis in vitae cumque reprehenderit est adipisci maxime?</p>
           <p class="h3">6€</p>
         </div>
         <div class="col-sm-6 col-md-4 p-5 text-center">
           <img class="img-fluid" src="img/coffee-item-4.png" alt="coffee item 4">
           <h2 class="my-3">LATTE</h2>
-          <p class="lead my-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti quas, molestiae iusto perspiciatis in vitae cumque reprehenderit est adipisci maxime?</p>
+          <p class="lead my-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti quas, molestiae iusto
+            perspiciatis in vitae cumque reprehenderit est adipisci maxime?</p>
           <p class="h3">6€</p>
         </div>
         <div class="col-sm-6 col-md-4 p-5 text-center">
           <img class="img-fluid" src="img/coffee-item-5.png" alt="coffee item 5">
           <h2 class="my-3">MACARONS</h2>
-          <p class="lead my-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti quas, molestiae iusto perspiciatis in vitae cumque reprehenderit est adipisci maxime?</p>
+          <p class="lead my-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti quas, molestiae iusto
+            perspiciatis in vitae cumque reprehenderit est adipisci maxime?</p>
           <p class="h3">3€</p>
         </div>
         <div class="col-sm-6 col-md-4 p-5 text-center">
           <img class="img-fluid" src="img/coffee-item-6.png" alt="coffee item 6">
           <h2 class="my-3">MACCHIATO</h2>
-          <p class="lead my-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti quas, molestiae iusto perspiciatis in vitae cumque reprehenderit est adipisci maxime?</p>
+          <p class="lead my-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti quas, molestiae iusto
+            perspiciatis in vitae cumque reprehenderit est adipisci maxime?</p>
           <p class="h3">6€</p>
         </div>
       </div>
@@ -186,7 +214,7 @@
   <section id="map-section">
 
   </section>
-  
+
   <footer>
     <div class="containter-fluid text-light py-3">
       <div class="row">
@@ -205,6 +233,31 @@
 
   <script src="js/jquery-3.4.1.slim.min.js"></script>
   <script src="js/bootstrap.bundle.min.js"></script>
+
+  <script>
+    window.addEventListener("load", function () {
+
+      let menuBtn = document.getElementById("menu-btn");
+      let mobileMenu = document.getElementById("mobile-menu");
+      let closeBtn = document.getElementById("close-btn");
+
+      menuBtn.addEventListener("click", function () {
+        mobileMenu.style.display = "block";
+      });
+
+      closeBtn.addEventListener("click", function () {
+        mobileMenu.style.display = "none";
+      });
+
+      let mobileMenuItems = document.getElementsByClassName("mobile-menu-item");
+
+      for (let i = 0; i < mobileMenuItems.length; i++) {
+        mobileMenuItems[i].addEventListener("click", function () {
+          mobileMenu.style.display = "none";
+        });
+      }
+    });
+  </script>
 </body>
 
 </html>
