--- a/5-website-building/assignment-01/index.html
+++ b/5-website-building/assignment-01/index.html
@@ -38,7 +38,7 @@
       <div class="row align-items-center">
         <div class="col-6 col-md-4">
           <div id="header-logo">
-            <h1 class="display-5 m-0">My Website</h1>
+            <h2 class="fw-normal m-0">My Website</h2>
           </div>
         </div>
         <div id="navigation-links" class="d-none d-md-block col-md-8 text-end h6 mt-3">
@@ -289,6 +289,7 @@
           if (!header.classList.contains("solid-header")) {
             header.classList.add("solid-header");
             menuIcon.setAttribute("src", "imgs/menu-white.png");
+
           };
 
         } else {
